fix: align footer content left

--- a/src/styles/globals/_footer-column.css
+++ b/src/styles/globals/_footer-column.css
@@ -1,10 +1,9 @@
 .footer-column {
     --footer-column-display: flex;
     --footer-column-flex-direction: column;
-    --footer-column-align-items: center;
+    --footer-column-align-items: flex-start;
     --footer-column-justify-content: flex-start;
 
-    --footer-column-logo-align-items: center;
 
     display: var(--footer-column-display);
     flex-direction: var(--footer-column-flex-direction);
@@ -13,20 +12,13 @@
 }
 
 @media screen and (min-width: 640px) {
-    .footer-column {
-        --footer-column-align-items: flex-start;
-    }
-
     .footer-column[column-name="logo"] {
         grid-column: 1 / -1;
-        align-items: var(--footer-column-logo-align-items);
     }
 }
 
 @media screen and (min-width: 960px) {
     .footer-column[column-name="logo"] {
-        --footer-column-logo-align-items: flex-start;
-
         grid-column: 1;
     }
 }
